# ChromoFold2D

./: .gitignore  README.md  app.py  main.py  requirements.txt  setup.cfg  setup.py
data/: Fluorescent-Protein-Database.csv  T_scales_table.csv
results/: kfold_results.json  oof_predictions.csv
src/protein_predictor/: __init__.py  config.py  tscales_bert_cls.py
src/protein_predictor/data/: __init__.py  dataset.py
src/protein_predictor/embeddings/: __init__.py  esm_encoder.py  smiles_encoder.py  tscales_encoder.py
src/protein_predictor/models/: __init__.py  network.py
src/protein_predictor/training/: __init__.py  callbacks.py  datamodule.py  kfold.py  kfold_utils.py
src/protein_predictor/utils/: __init__.py  figures.py
